--- a/Project/Project.csproj
+++ b/Project/Project.csproj
@@ -49,6 +49,12 @@
     <Compile Include="Button_WOC.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="carshop.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="carshop.Designer.cs">
+      <DependentUpon>carshop.cs</DependentUpon>
+    </Compile>
     <Compile Include="SignIn.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -63,6 +69,9 @@
     <Compile Include="SignUp.Designer.cs">
       <DependentUpon>SignUp.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="carshop.resx">
+      <DependentUpon>carshop.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="SignIn.resx">
       <DependentUpon>SignIn.cs</DependentUpon>
     </EmbeddedResource>
