--- a/Project/Project.csproj
+++ b/Project/Project.csproj
@@ -150,12 +150,9 @@
     <None Include="Resources\paeto.png" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Database.mdf">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
+    <Content Include="Database.mdf" />
     <Content Include="Database_log.ldf">
       <DependentUpon>Database.mdf</DependentUpon>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <None Include="Resources\glass.png" />
     <None Include="Resources\138-1388270_transparent-user-png-icon.png" />
